# melonDS-android

./: .gitattributes  .gitmodules  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/schemas/me.magnum.melonds.database.MelonDatabase/: 9.json
app/src/debug/: AndroidManifest.xml
app/src/debug/java/me/magnum/melonds/debug/: DebugCommandReceiver.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMelonEventMessenger.cpp  AndroidMelonEventMessenger.h  Configuration.h  DSiSupport.cpp  DSiSupport.h  EmulatorMessageQueueJNI.cpp  MelonDS.cpp  MelonDS.h  MelonDSAndroidConfiguration.cpp  MelonDSAndroidInterface.cpp  MelonDSAndroidJNI.cpp  MelonDSAudio.cpp  MelonDSNandJNI.cpp  MelonEventMessenger.h  MelonInstance.cpp  MelonInstance.h  RetroAchievementsMapper.cpp  RetroAchievementsMapper.h  RomGbaSlotConfig.h
app/src/main/cpp/renderer/: FrameQueue.cpp  FrameQueue.h  ScreenshotRenderer.h  VulkanAccumulate3dShader.comp  VulkanAccumulate3dShaderData.h  VulkanCompositorShader.comp  VulkanCompositorShaderData.h  VulkanFilterMode.h  VulkanOutput.cpp  VulkanOutput.h  VulkanPlaneFilterMode10ShaderData.h  VulkanPlaneFilterMode11ShaderData.h  VulkanPlaneFilterMode12ShaderData.h  VulkanPlaneFilterMode13ShaderData.h  VulkanPlaneFilterMode1ShaderData.h  VulkanPlaneFilterMode2ShaderData.h  VulkanPlaneFilterMode3ShaderData.h  VulkanPlaneFilterMode4ShaderData.h  VulkanPlaneFilterMode5ShaderData.h  VulkanPlaneFilterMode6ShaderData.h  VulkanPlaneFilterMode7ShaderData.h  VulkanPlaneFilterMode8ShaderData.h  VulkanPlaneFilterMode9ShaderData.h  VulkanPlaneFilterShader.comp  VulkanPlaneOverlayShader.comp  VulkanPlaneOverlayShaderData.h  VulkanRetroArchFilterChain.cpp  VulkanRetroArchFilterChain.h  VulkanScaleFXPass0ShaderData.h  VulkanScaleFXPass1ShaderData.h  VulkanScaleFXPass2ShaderData.h  VulkanScaleFXPass3ShaderData.h  VulkanScaleFXPass4ShaderData.h  VulkanScaleFXShader.comp  VulkanSurfacePresenter.cpp  VulkanSurfacePresenter.frag  VulkanSurfacePresenter.h  VulkanSurfacePresenter.vert  VulkanSurfacePresenterFragmentShaderData.h  VulkanSurfacePresenterVertexShaderData.h
app/src/main/cpp/retroachievements/: RARuntimeBridgeConfig.h  RetroAchievementsManager.cpp  RetroAchievementsManager.h
app/src/main/java/me/magnum/melonds/: MelonDSApplication.kt  MelonDSiNand.kt  MelonEmulator.kt
app/src/main/java/me/magnum/melonds/common/: UriFileHandler.kt
app/src/main/java/me/magnum/melonds/common/network/: MelonOkHttpInterceptor.kt
app/src/main/java/me/magnum/melonds/common/opengl/: VideoFilterShaderProvider.kt
app/src/main/java/me/magnum/melonds/common/retroachievements/: AndroidRASignatureProvider.kt  AndroidRAUserAuthStore.kt
app/src/main/java/me/magnum/melonds/common/romprocessors/: CompressedRomFileProcessor.kt  NdsRomFileProcessor.kt  RomFileProcessor.kt  SevenZRomFileProcessor.kt
app/src/main/java/me/magnum/melonds/database/: MelonDatabase.kt
app/src/main/java/me/magnum/melonds/database/daos/: RetroAchievementsDao.kt
app/src/main/java/me/magnum/melonds/database/migrations/: Migration8to9.kt
app/src/main/java/me/magnum/melonds/debug/: DebugCommandStateStore.kt
app/src/main/java/me/magnum/melonds/di/: AppModule.kt  DatabaseModule.kt  EmulatorRuntimeModule.kt  MelonModule.kt  RAModule.kt
app/src/main/java/me/magnum/melonds/domain/model/: ControllerConfiguration.kt  DldiSdCardConfiguration.kt  EmulatorConfiguration.kt  ExternalDisplayMode.kt  Input.kt  RendererConfiguration.kt  RomFilter.kt  RomViewMode.kt  Slot2AnalogMapping.kt  SortingMode.kt  VideoFiltering.kt  VideoRenderer.kt
app/src/main/java/me/magnum/melonds/domain/repositories/: CheatsRepository.kt  RetroAchievementsRepository.kt  RomsRepository.kt  SaveStatesRepository.kt  SettingsRepository.kt
app/src/main/java/me/magnum/melonds/domain/services/: DSiNandManager.kt  EmulatorLaunchPreconditionChecker.kt  EmulatorManager.kt
app/src/main/java/me/magnum/melonds/impl/: AndroidDSiNandManager.kt  AndroidRetroAchievementsRepository.kt  AppLogFileRecorder.kt  FileSystemRomsRepository.kt  FileSystemSaveStatesRepository.kt  InternalBackgroundsRepository.kt  InternalLayoutsRepository.kt  NdsRomCache.kt  NusDSiWareMetadataRepository.kt  RomIconProvider.kt  RoomCheatsRepository.kt  SettingsBackupManager.kt  SharedPreferencesSettingsRepository.kt
app/src/main/java/me/magnum/melonds/impl/emulator/: AndroidEmulatorManager.kt  DldiFolderSyncManager.kt  EmulatorEventType.kt  EmulatorMessageQueue.kt  EmulatorSession.kt  SramProvider.kt
app/src/main/java/me/magnum/melonds/impl/layout/: DeviceLayoutDisplayMapper.kt  (+1 more)
app/src/main/java/me/magnum/melonds/parcelables/: ControllerConfigurationParcelable.kt  InputConfigParcelable.kt  RomConfigParcelable.kt  RomGbaSlotConfigParcelable.kt  RomParcelable.kt
app/src/main/java/me/magnum/melonds/utils/: ControllerConfigurationDtoTypeAdapter.kt  FileUtils.kt  InputAssignmentDtoTypeAdapter.kt  InputUtils.kt  RomProcessor.kt
app/src/main/res/drawable/: color_picker_selected.xml  ic_view_grid.xml  ic_view_list.xml
app/src/main/res/layout/: dialog_firmware_colour_picker.xml  dialog_retroachievements_login.xml  view_layout_editor_manager.xml
app/src/main/res/menu/: rom_list_menu.xml
app/src/main/res/values/: arrays.xml  feature_switches.xml  strings.xml  styles.xml
app/src/main/res/values-b+es/: strings.xml
app/src/main/res/values-b+fr/: strings.xml
app/src/main/res/values-b+id/: strings.xml
app/src/main/res/values-b+it/: strings.xml
app/src/main/res/values-b+pt+BR/: strings.xml
app/src/main/res/values-b+ru/: strings.xml
app/src/main/res/values-b+zh+CN/: strings.xml
app/src/main/res/values-b+zh+Hans/: strings.xml
app/src/main/res/xml/: pref_audio.xml  pref_general.xml  pref_input.xml  pref_retroachievements.xml  pref_roms.xml  pref_save_files.xml  pref_system.xml  pref_video.xml
app/src/release/: AndroidManifest.xml
app/src/release/java/me/magnum/melonds/debug/: ReleaseStateCommandReceiver.kt
app/src/test/java/me/magnum/melonds/utils/: InputAssignmentDtoTypeAdapterTest.kt
src/net/: CMakeLists.txt
(+301 files in other folders)
